2025-11-23  G. Branden Robinson <g.branden.robinson@gmail.com>

	* src/roff/troff/input.cpp (token::description): Add description
	of the "empty" token type to which the global `tok` is
	initialized.  This comes up in a corner case of parser state,
	because sometimes we have to read multiple characters to decide
	what kind of token the very first one in the input stream is.
	Consider a delimited escape sequence whose wheels fall off
	because it's invalidly delimited.

2025-11-28  G. Branden Robinson <g.branden.robinson@gmail.com>

	* src/roff/troff/input.cpp (read_delimited_number)
	(read_delimited_name): Refactor.  Make logic more parallel.
	Make both functions check explicitly for EOF where the starting
	delimiter should be (and throw error if it's encountered).  Make
	both call `is_usable_as_delimiter()` member function of
	`start_token` object.  Parallelize wording of warning
	diagnostics in "delim" category.

2025-11-28  G. Branden Robinson <g.branden.robinson@gmail.com>

	* src/roff/groff/tests/check-delimiter-validity.sh: Add unit
	test for foregoing change to delimiters accepted when reading a
	delimited name.

2025-11-28  G. Branden Robinson <g.branden.robinson@gmail.com>

	* src/roff/troff/input.cpp (read_delimited_name): Stop accepting
	horizontal motion tokens as escape sequence delimiters.  This to
	prohibit use of the delimited `\h` escape sequence as a
	delimiter, but because of GNU troff's internal design, also
	prohibits the parameterless `\0`, `\^`, and `\|` delimiters.

	* doc/groff.texi.in (Delimiters):
	* man/groff.7.man (Delimiters): De-document support for these
	delimiters.

	* NEWS: Report change.

	Fixes <https://savannah.gnu.org/bugs/?67744>.  The problem of
	acceptance of `\h` as an escape sequence delimiter appears to
	date back to groff's birth.  (`get_delim_name()` didn't check
	for any token types except EOF and newline.)

2025-11-28  G. Branden Robinson <g.branden.robinson@gmail.com>
