@@ -1,3 +1,11 @@
+2025-11-24  G. Branden Robinson <g.branden.robinson@gmail.com>
+
+	* src/roff/troff/input.cpp (do_overstrike, do_bracket)
+	(token::next): Convert some recent assertions to error
+	diagnostics, since inputs to provoke them are not impossible.
+	I found these by attempting to format GNU troff's own ELF
+	executable as a document (the laziest possible fuzz testing).
+
 2025-11-23  G. Branden Robinson <g.branden.robinson@gmail.com>
 
 	* src/roff/troff/input.cpp (token::description): Add description
